--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -244,7 +244,6 @@
     <Compile Include="CakeMarketingApi\Clients\TrafficClient.cs" />
     <Compile Include="CakeMarketingApi\Clients\TrafficRequest.cs" />
     <Compile Include="CakeMarketingApi\Entities\Advertiser.cs" />
-    <Compile Include="CakeMarketingApi\Entities\Affiliate.cs" />
     <Compile Include="CakeMarketingApi\Entities\ArrayOfTraffic.cs" />
     <Compile Include="CakeMarketingApi\Entities\Browser.cs" />
     <Compile Include="CakeMarketingApi\Entities\Campaign.cs" />
@@ -265,6 +264,7 @@
     <Compile Include="CakeMarketingApi\Entities\Currency.cs" />
     <Compile Include="CakeMarketingApi\Entities\DateRangeTraffic.cs" />
     <Compile Include="CakeMarketingApi\Entities\Device.cs" />
+    <Compile Include="CakeMarketingApi\Entities\IdNameEntities.cs" />
     <Compile Include="CakeMarketingApi\Entities\OfferAffiliateDailySummary.cs" />
     <Compile Include="CakeMarketingApi\Entities\OfferContractInfo.cs" />
     <Compile Include="CakeMarketingApi\Entities\OfferStatus.cs" />
