showing td stats, etc

--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -152,6 +152,7 @@
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="Areas\TD\Controllers\AccountsController.cs" />
     <Compile Include="Areas\TD\Controllers\StatsController.cs" />
+    <Compile Include="Areas\TD\Models\TDStatsVM.cs" />
     <Compile Include="Areas\TD\TDAreaRegistration.cs" />
     <Compile Include="Controllers\BudgetsController.cs" />
     <Compile Include="Controllers\ControllerBase.cs" />
@@ -774,7 +775,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\TD\Models\" />
     <Folder Include="Areas\TD\Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
@@ -899,6 +899,7 @@
     <Content Include="Areas\TD\Views\Accounts\Index.cshtml" />
     <Content Include="Areas\TD\Views\_ViewStart.cshtml" />
     <Content Include="Areas\TD\Views\Stats\Account.cshtml" />
+    <Content Include="Areas\TD\Views\Stats\Generic.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
@@ -914,7 +915,6 @@
     <Content Include="Views\Screens\Variables.cshtml" />
     <Content Include="Views\Screens\EditSalesStats.cshtml" />
     <Content Include="Views\Screens\SalesStats.cshtml" />
-    <Content Include="Views\Stats\TDAccount.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
