--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -900,6 +900,7 @@
     <Content Include="Areas\TD\Views\_ViewStart.cshtml" />
     <Content Include="Areas\TD\Views\Stats\Account.cshtml" />
     <Content Include="Areas\TD\Views\Stats\Generic.cshtml" />
+    <Content Include="Areas\TD\Views\Stats\AdRoll.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
@@ -908,7 +909,6 @@
     <Content Include="Views\Budgets\Start.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\DecimalComma.cshtml" />
     <Content Include="Views\Budgets\Admin.cshtml" />
-    <Content Include="Views\Stats\AdRoll.cshtml" />
     <Content Include="Views\Stats\CakeAdv.cshtml" />
     <Content Include="Views\Stats\Links.cshtml" />
     <Content Include="Views\Screens\Variable.cshtml" />
