td.DailySummary- PostClick and PostView Conv

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -184,6 +184,10 @@
     <Compile Include="MigrationsTD\201508242200333_Mig_DBM_Conv.Designer.cs">
       <DependentUpon>201508242200333_Mig_DBM_Conv.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201508251738143_Mig_DBM_DaySumConvs.cs" />
+    <Compile Include="MigrationsTD\201508251738143_Mig_DBM_DaySumConvs.Designer.cs">
+      <DependentUpon>201508251738143_Mig_DBM_DaySumConvs.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -307,6 +311,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201508242200333_Mig_DBM_Conv.resx">
       <DependentUpon>201508242200333_Mig_DBM_Conv.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201508251738143_Mig_DBM_DaySumConvs.resx">
+      <DependentUpon>201508251738143_Mig_DBM_DaySumConvs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
