--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -151,6 +151,8 @@
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="Areas\TD\Controllers\AccountsController.cs" />
+    <Compile Include="Areas\TD\Controllers\AdvertisersController.cs" />
+    <Compile Include="Areas\TD\Controllers\CampaignsController.cs" />
     <Compile Include="Areas\TD\Controllers\StatsController.cs" />
     <Compile Include="Areas\TD\Models\TDStatsVM.cs" />
     <Compile Include="Areas\TD\TDAreaRegistration.cs" />
@@ -901,6 +903,8 @@
     <Content Include="Areas\TD\Views\Stats\Account.cshtml" />
     <Content Include="Areas\TD\Views\Stats\Generic.cshtml" />
     <Content Include="Areas\TD\Views\Stats\AdRoll.cshtml" />
+    <Content Include="Areas\TD\Views\Advertisers\Index.cshtml" />
+    <Content Include="Areas\TD\Views\Campaigns\Index.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
