--- a/3/DirectAgents.Web/DirectAgents.Web/packages.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
+  <package id="FluentValidationNA" version="1.2.16" targetFramework="net45" />
+  <package id="KendoGridBinderEx" version="5.0.0.10" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
@@ -17,5 +20,6 @@
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net45" />
+  <package id="System.Linq.Dynamic.Library" version="1.1.14" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
 </packages>
