--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -931,6 +931,7 @@
     <Content Include="Areas\TD\Views\Campaigns\Pacing.cshtml" />
     <Content Include="Areas\TD\Views\Campaigns\PacingGrid.cshtml" />
     <Content Include="Areas\TD\Views\Campaigns\PerformanceGrid.cshtml" />
+    <Content Include="Areas\TD\Views\Campaigns\Edit.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
