--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Areas\TD\Controllers\AdvertisersController.cs" />
     <Compile Include="Areas\TD\Controllers\BudgetInfosController.cs" />
     <Compile Include="Areas\TD\Controllers\CampaignsController.cs" />
+    <Compile Include="Areas\TD\Controllers\PlatformsController.cs" />
     <Compile Include="Areas\TD\Controllers\StatsController.cs" />
     <Compile Include="Areas\TD\Models\CampaignPacingVM.cs" />
     <Compile Include="Areas\TD\Models\TDStatsVM.cs" />
@@ -935,6 +936,7 @@
     <Content Include="Areas\TD\Views\Campaigns\Edit.cshtml" />
     <Content Include="Areas\TD\Views\BudgetInfos\Edit.cshtml" />
     <Content Include="Areas\TD\Views\Advertisers\Edit.cshtml" />
+    <Content Include="Areas\TD\Views\Platforms\Index.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
