--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -35,6 +35,13 @@
     <!--<add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />-->
     <add key="BudgetAlerts_TestEmail" value="" />
     <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com" />
+
+    <!-- APIs -->
+    <add key="AdRollUsername" value="portal@directagents.com" />
+    <add key="AdRollPassword" value="dir3ct@pi!" />
+    <add key="GoogleAPI_Certificate" value="C:\DA\portal\API\271266501f61f25ee49c19a3c5cf3bb9a769ba00-privatekey.p12" />
+    <add key="GoogleAPI_ServiceEmail" value="960492209499-cdktdkluj4sj5ee8bto7hdi7m058lfg9@developer.gserviceaccount.com" />
+    <add key="DBM_AllCreativeBucket" value="151075984680687222131441207602141_report" />
   </appSettings>
 
   <!--Note: In order for this to work, need to use the Configuration Manager in IIS and unlock the sections for anonymous/windowsAuthentication. -->
