sync adroll accounts

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -205,6 +205,10 @@
     <Compile Include="MigrationsTD\201509292053368_Mig_DBM_CDS_AddIOID.Designer.cs">
       <DependentUpon>201509292053368_Mig_DBM_CDS_AddIOID.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201510011510576_Mig_AdRollAdvProps.cs" />
+    <Compile Include="MigrationsTD\201510011510576_Mig_AdRollAdvProps.Designer.cs">
+      <DependentUpon>201510011510576_Mig_AdRollAdvProps.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -340,6 +344,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201509292053368_Mig_DBM_CDS_AddIOID.resx">
       <DependentUpon>201509292053368_Mig_DBM_CDS_AddIOID.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201510011510576_Mig_AdRollAdvProps.resx">
+      <DependentUpon>201510011510576_Mig_AdRollAdvProps.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
