--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -948,6 +948,7 @@
     <Content Include="Areas\TD\Views\Accounts\MaintenanceDetail.cshtml" />
     <Content Include="Areas\TD\Views\Shared\ChooseMonth.cshtml" />
     <Content Include="Areas\TD\Views\Shared\ChooseMonthNonSubmit.cshtml" />
+    <Content Include="Areas\TD\Views\Stats\Spreadsheet.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
